Employee Detail Bug Fixed
