# src/swagger_output.json
@@ -380,13 +380,23 @@
                   "branch": {
                     "type": "string",
                     "example": "66c4bfa573d93a8934beddfb"
+                  },
+                  "route": {
+                    "type": "string",
+                    "example": "66c4bfa573d93a8934beddfb"
+                  },
+                  "ferry_destination": {
+                    "type": "string",
+                    "example": "66c4bfa573d93a8934beddfb"
                   }
                 },
                 "required": [
                   "name",
                   "emp_no",
                   "nrc",
-                  "branch"
+                  "branch",
+                  "route",
+                  "ferry_destination"
                 ]
               }
             }
@@ -462,13 +472,23 @@
                   "branch": {
                     "type": "string",
                     "example": "66c4bfa573d93a8934beddfb"
+                  },
+                  "route": {
+                    "type": "string",
+                    "example": "66c4bfa573d93a8934beddfb"
+                  },
+                  "ferry_destination": {
+                    "type": "string",
+                    "example": "66c4bfa573d93a8934beddfb"
                   }
                 },
                 "required": [
                   "name",
                   "emp_no",
                   "nrc",
-                  "branch"
+                  "branch",
+                  "route",
+                  "ferry_destination"
                 ]
               }
             }
